--- a/robot/Makefile
+++ b/robot/Makefile
@@ -2,7 +2,7 @@ frontend:
 	bash components/frontend.sh
 
 catalogue:
-	bash components/catalouge.sh
+	bash components/catalogue.sh
 
 cart:
 	bash components/cart.sh
