--- a/robot/Makefile
+++ b/robot/Makefile
@@ -1,13 +1,14 @@
 frontend:
 	bash components/frontend.sh
-
 catalogue:
 	bash components/catalogue.sh
-
 cart:
 	bash components/cart.sh
 mongodb:
 	bash components/mongodb.sh	
-
+redis:
+	bash components/redis.sh
+user:
+	bash components/user.sh
 
 	
