--- a/robot/sample.yaml
+++ b/robot/sample.yaml
@@ -1,10 +1,16 @@
 - name: Play1
   hosts: all
   tasks:
-    - name: Print Hello from task1 of Pay1
+    - name: Print Hello from task1 of Play1
       ansible.builtin.debug:
-         msg: hai from task1 of Pay1
+         msg: hai from task1 of Play1
 
-    - name: Print Hello from task2 of Pay1
+    - name: Print Hello from task2 of Play1
       ansible.builtin.debug:
-          msg: hai from task2 of Pay1
+          msg: hai from task2 of Play1
+- name: Play1
+  hosts: all
+  tasks:
+    - name: Print Hello from task2 of Play1
+      ansible.builtin.debug:
+         msg: hai from task1 of Play2
