--- a/robot/variable.yaml
+++ b/robot/variable.yaml
@@ -3,7 +3,7 @@
   vars:                   #this called as play level variables.
     URL: Play.google.com
   vars-files:
-    - demos-vars-files.yaml
+    - demo-vars-files.yaml
   tasks:
     - name: printing the URL
       ansible.builtin.debug:
