--- a/robot/demo-on-facts.yaml
+++ b/robot/demo-on-facts.yaml
@@ -4,3 +4,6 @@
     - name: print OS Distro
       ansible.builtin.debug:
         msg: OS Distro is {{ ansible_distribution }}
+    - name: print Mac Address
+      ansible.builtin.debug:
+        msg: Mac Address {{ ansible_default_ipv4.macaddress }}
