--- a/robot/sample.yaml
+++ b/robot/sample.yaml
@@ -9,7 +9,7 @@
       ansible.builtin.debug:
           msg: hai from task2 of Play1
 - name: Play2
-  hosts: all
+  hosts: prod
   tasks:
     - name: Print Hello from task2 of Play1
       ansible.builtin.debug:
