--- a/robot/register.yaml
+++ b/robot/register.yaml
@@ -1,1 +1,5 @@
-- name: 
+- name: Demo on using shell module
+  hosts: all
+  tasks:
+      - name: Running a shell commands
+        ansible.builtin.shell: uptime
