--- a/robot/register.yaml
+++ b/robot/register.yaml
@@ -3,8 +3,8 @@
   tasks:
       - name: Running a shell commands
         ansible.builtin.shell: uptime
-        register: RAJESH
+        register: OUT
 
       - name: Printing the out variable
         ansible.builtin.debug:
-         msg: "{{RAJESH}}"
+         msg: "{{OUT.stdout}}"
