--- a/robot/privilages.yaml
+++ b/robot/privilages.yaml
@@ -8,4 +8,14 @@
 
     - name: Printing the out variable
       ansible.builtin.debug:
-        msg: "{{OUT.stdout}}" 
+        msg: "{{OUT.stdout}}"
+
+    - name: Running a shell commands as centos user
+      ansible.builtin.shell: id
+      register: OUT
+      become_user: centos
+
+    - name: Printing the out variable as centos user
+      ansible.builtin.debug:
+        msg: "{{OUT.stdout}}"
+      become_user: centos       
