--- a/robot/roles/frontend/tasks/main.yaml
+++ b/robot/roles/frontend/tasks/main.yaml
@@ -17,7 +17,7 @@
 - name: copy frontend content to nginx path
   ansible.builtuin.copy:
     src: /tmp/frontend-main/static/
-    dest: /usr/share/nginx/html
+    dset: /usr/share/nginx/html
     remote_src: yes
-    
+
      
