--- a/robot/roles/frontend/tasks/main.yaml
+++ b/robot/roles/frontend/tasks/main.yaml
@@ -15,7 +15,7 @@
     state: absent             # absent means delete present means install
 
 - name: copy frontend content to nginx path
-  ansible.builtuin.copy:
+  ansible.builtin.copy:
     src: /tmp/frontend-main/static/
     dest: /usr/share/nginx/html
     remote_src: yes
