--- a/robot/roles/frontend/tasks/main.yaml
+++ b/robot/roles/frontend/tasks/main.yaml
@@ -5,7 +5,7 @@
 
 - name: download and extract frontend
   ansible.builtin.unarchive:
-    src:  curl -s -L -o /tmp/frontend.zip "https://github.com/stans-robot-project/frontend/archive/main.zip"
+    src:  "https://github.com/stans-robot-project/frontend/archive/main.zip"
     dest: /tmp
     remote_src: yes           # if the source is not local, you need to mention remote source as yes.
 
