--- a/robot/roles/frontend/tasks/main.yaml
+++ b/robot/roles/frontend/tasks/main.yaml
@@ -26,7 +26,7 @@
     dest: /etc/nginx/default.d/roboshop.conf
 
 - name: restarting nginx
-  ansible.builtin.server:
+  ansible.builtin.service:
     name: nginx
     state: restarted
     enabled: yes
