--- a/robot/roles/frontend/files/roboshop.conf
+++ b/robot/roles/frontend/files/roboshop.conf
@@ -11,7 +11,7 @@ try_files Suri /images/placeholder.jpg
 }
 
 
-error_page 500 502 503 584 /50x.html;
+# error_page 500 502 503 584 /50x.html;
 
 location /api/catalogue/ { proxy_pass http://localhost:8888/; }
 
