--- a/robot/roles/frontend/files/roboshop.conf
+++ b/robot/roles/frontend/files/roboshop.conf
@@ -1,21 +1,21 @@
-proxy_http_version 1.1
-
+proxy_http_version 1.1;
 location /images/ {
-
-expires 5s
-
-root /usr/share/nginx/html
-
-try_files Suri /images/placeholder.jpg
+    expires 5s;
+    root   /usr/share/nginx/html;
+    try_files $uri /images/placeholder.jpg;
 
 }
+ #error_page  404              /404.html;
+
+    # redirect server error pages to the static page /50x.html
+    #
+    error_page   500 502 503 504  /50x.html;
 
 
-# error_page 500 502 503 584 /50x.html;
 
-location /api/catalogue/ { proxy_pass http://localhost:8888/; }
+location /api/catalogue/ { proxy_pass http://localhost:8080/; }
 
-location /api/user/ { proxy_pass http://localhost:8888/; }
+location /api/user/ { proxy_pass http://localhost:8080/; }
 
 location /api/cart/ { proxy_pass http://localhost:8080/; }
 
