--- a/robot/roles/frontend/files/roboshop.conf
+++ b/robot/roles/frontend/files/roboshop.conf
@@ -3,8 +3,7 @@ location /images/ {
     expires 5s;
     root   /usr/share/nginx/html;
     try_files $uri /images/placeholder.jpg;
-
-}
+    }
  #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
@@ -23,8 +22,7 @@ location /api/shipping/ { proxy_pass http://localhost:8080/; }
 
 location /api/payment/ { proxy_pass http://localhost:8080/; }
 
-location /nginx_status {
-
-    stub status on;
-    access_log off;
-}
+ location /nginx_status {
+        stub_status on;
+        access_log off;
+    }
