--- a/robot/roboshop.yaml
+++ b/robot/roboshop.yaml
@@ -1,5 +1,5 @@
 - name: configure roboshop project
-  hosts: frontend
+  hosts: "{{COMPONENT}}"
   become: yes
   roles: 
-    - frontend
+    - "{{COMPONENT}}"
