--- a/robot/roles/mongodb/tasks/main.yaml
+++ b/robot/roles/mongodb/tasks/main.yaml
@@ -27,7 +27,7 @@
     remote_src: yes
 
 - name: load catalogue schema
-  community.mongodb.mongodb-shell:
+  community.mongodb.mongodb_shell:
      file: "/tmp/mongodb-main/catalogue.js"
      idempotent: yes
 
