--- a/robot/roles/mongodb/tasks/main.yaml
+++ b/robot/roles/mongodb/tasks/main.yaml
@@ -28,13 +28,13 @@
 
 - name: load catalogue schema
   community.mongodb.mongodb_shell:
-     file: "/tmp/mongodb-main/{{item}}.js"
+     file: "/tmp/mongodb-main/catalogue.js"
      idempotent: yes
-  loop:
-     - catalogue
-     - user
 
 
-
+- name: load users schema
+  community.mongodb.mongodb_shell:
+     file: "/tmp/mongodb-main/users.js"
+     idempotent: yes
 
 
