--- a/robot/roles/mongodb/tasks/main.yaml
+++ b/robot/roles/mongodb/tasks/main.yaml
@@ -20,11 +20,10 @@
     state: started
     enabled: yes
 
-- name: download and extract mongodb
-  ansible.builtin.unarchive:
-    src:  "https://github.com/stans-robot-project/mongodb/archive/main.zip"
-    dest: /tmp
-    remote_src: yes
+- name: downloading and extracting mongodb
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: download
 
 - name: load catalogue schema
   community.mongodb.mongodb_shell:
