--- a/robot/roles/catalogue/tasks/main.yaml
+++ b/robot/roles/catalogue/tasks/main.yaml
@@ -9,5 +9,29 @@
     - nodejs
     - gcc-c++
 
+- name: adding application user
+  ansible.builtin.user:
+    name: roboshop
+    comment: roboshop application user
+
+- name: downloading and extracting catalogue
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: download
+
+- name: cleanig the old content
+  ansible.builtin.file:
+    path: /home/roboshop/{{COMPONENT}}
+    state: absent
+
+- name: copy file
+  ansible.builtin.copy:
+    src: /tmp/{{COMPONENT}}-main/
+    dest: /home/centos/{{COMPONENT}}/  
+    remote_src: yes
+  become_user: roboshop
+
+
+
 
 
