--- a/robot/roles/catalogue/tasks/main.yaml
+++ b/robot/roles/catalogue/tasks/main.yaml
@@ -27,7 +27,7 @@
 - name: copy file
   ansible.builtin.copy:
     src: /tmp/{{COMPONENT}}-main/
-    dest: /home/centos/{{COMPONENT}}/  
+    dest: /home/roboshop/{{COMPONENT}}/  
     remote_src: yes
   become_user: roboshop
 
