--- a/robot/roles/catalogue/tasks/main.yaml
+++ b/robot/roles/catalogue/tasks/main.yaml
@@ -38,6 +38,7 @@
 - name: copying the systemd file
   ansible.builtin.copy:
     scr: systemd.service
+    dest: /etc/systemd/system/{{COMPONENT}}.service
 
 - name: restarting service
   ansible.builtin.systemd:
