--- a/robot/roles/catalogue/tasks/main.yaml
+++ b/robot/roles/catalogue/tasks/main.yaml
@@ -37,7 +37,7 @@
 
 - name: copying the systemd file
   ansible.builtin.copy:
-    scr: systemd.service
+    src: systemd.service
     dest: /etc/systemd/system/{{COMPONENT}}.service
 
 - name: restarting service
