--- a/robot/roles/frontend/files/roboshop.conf
+++ b/robot/roles/frontend/files/roboshop.conf
@@ -12,7 +12,7 @@ location /images/ {
 
 
 
-location /api/catalogue/ { proxy_pass http://localhost:8080/; }
+location /api/catalogue/ { proxy_pass http://catalogue.sunny.du.devops.us.to:8080/; }
 
 location /api/user/ { proxy_pass http://localhost:8080/; }
 
