--- a/robot/roles/catalogue/tasks/main.yaml
+++ b/robot/roles/catalogue/tasks/main.yaml
@@ -46,8 +46,8 @@
     daemon-reload: yes
     name: "{{COMPONENT}}"
 
-- name: set host name
-  ansible.builtin.shell: set-hostname {{COMPONENt}}
+- name: set-hostname
+  ansible.builtin.shell: set-hostname {{COMPONENT}}
 
 
 
