--- a/robot/roles/frontend/tasks/main.yaml
+++ b/robot/roles/frontend/tasks/main.yaml
@@ -31,8 +31,11 @@
     enabled: yes
 
 
-- name: set-hostname
-  ansible.builtin.shell: set-hostname {{COMPONENT}}
+- name: doing set-hostname
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: set-hostname
+    
 
 
      
