--- a/robot/roles/redis/tasks/main.yaml
+++ b/robot/roles/redis/tasks/main.yaml
@@ -12,4 +12,10 @@
   ansible.builtin.replace:
     path: /etc/redis.conf
     regexp: '127.0.0.1'
-    replace: '0.0.0.0'   
+    replace: '0.0.0.0' 
+
+- name: start the redis service
+  ansible.builtin.service:
+    state: started
+    name: redis
+    enabled: yes  
