--- a/robot/roles/catalogue/tasks/main.yaml
+++ b/robot/roles/catalogue/tasks/main.yaml
@@ -46,9 +46,10 @@
     daemon-reload: yes
     name: "{{COMPONENT}}"
 
-- name: set-hostname
-  ansible.builtin.shell: set-hostname {{COMPONENT}}
-
+- name: doing set-hostname
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: set-hostname
 
 
 
