--- a/robot/roles/redis/tasks/main.yaml
+++ b/robot/roles/redis/tasks/main.yaml
@@ -17,11 +17,10 @@
 - name: start the redis service
   ansible.builtin.service:
     state: started
-    name: {{COMPONENT}}
+    name: redis
     enabled: yes
 
 - name: doing set-hostname
   ansible.builtin.include_role:
     name: common
     tasks_from: set-hostname
-    
