--- a/robot/roles/redis/tasks/main.yaml
+++ b/robot/roles/redis/tasks/main.yaml
@@ -1,7 +1,7 @@
 - name: copying the repo
   ansible.builtin.copy:
     src: redis.repo
-    dest: /etc/systemd/system/{{COMPONENT}}.service
+    dest: /etc/yum.repos.d/redis.repo
 
 - name: installing redis
   ansible.builtin.package:
