--- a/robot/roles/redis/tasks/main.yaml
+++ b/robot/roles/redis/tasks/main.yaml
@@ -6,7 +6,7 @@
 - name: installing redis
   ansible.builtin.package:
     name: redis
-    state: installed
+    state: present
 
 - name: update redis config
   ansible.builtin.replace:
