--- a/robot/roles/redis/tasks/main.yaml
+++ b/robot/roles/redis/tasks/main.yaml
@@ -12,16 +12,10 @@
   ansible.builtin.replace:
     path: /etc/redis.conf
     regexp: '127.0.0.1'
-    replace: '0.0.0.0'
-
-- name: Reload systemd daemon
-  become: true
-  systemd:
-    daemon_reload: yes 
+    replace: '0.0.0.0' 
 
 - name: Restart Redis service
-  become: true
-  service:
+  ansible.builtin.service:
     name: redis
     state: restarted
 
