--- a/robot/roles/frontend/files/roboshop.conf
+++ b/robot/roles/frontend/files/roboshop.conf
@@ -14,7 +14,7 @@ location /images/ {
 
 location /api/catalogue/ { proxy_pass http://catalogue.sunny.du.devops.us.to:8080/; }
 
-location /api/user/ { proxy_pass http://localhost:8080/; }
+location /api/user/ { proxy_pass http://user.sunny.du.devops.us.to:8080/; }
 
 location /api/cart/ { proxy_pass http://localhost:8080/; }
 
