--- a/robot/roles/user/files/systemd.service
+++ b/robot/roles/user/files/systemd.service
@@ -1,12 +1,11 @@
 [Unit]
-Description = User Service
+Description = cart Service
 [Service]
 User=roboshop
-Environment=MONGO=true
 Environment=REDIS_HOST=redis.sunny.du.devops.us.to
-Environment=MONGO_URL="mongodb://mongodb.sunny.du.devops.us.to:27017/users"
-ExecStart=/bin/node /home/roboshop/user/server.js
-SyslogIdentifier=user
+Environment=CATALOGUE_HOST=catalogue.sunny.du.devops.us.to
+ExecStart=/bin/node /home/roboshop/cart/server.js
+SyslogIdentifier=cart
 
 [Install]
 WantedBy=multi-user.target
