--- a/robot/roles/frontend/files/roboshop.conf
+++ b/robot/roles/frontend/files/roboshop.conf
@@ -16,7 +16,7 @@ location /api/catalogue/ { proxy_pass http://catalogue.sunny.du.devops.us.to:808
 
 location /api/user/ { proxy_pass http://user.sunny.du.devops.us.to:8080/; }
 
-location /api/cart/ { proxy_pass http://localhost:8080/; }
+location /api/cart/ { proxy_pass http://cart.sunny.du.devops.us.to:8080/; }
 
 location /api/shipping/ { proxy_pass http://localhost:8080/; }
 
