--- a/robot/roles/user/tasks/main.yaml
+++ b/robot/roles/user/tasks/main.yaml
@@ -1,56 +1,6 @@
-- name: comfiguring the yum repo
-  ansible.builtin.shell: curl --silent --location https://rpm.nodesource.com/setup_16.x | sudo bash -
-
-- name: install nodejs
-  ansible.builtin.yum:
-    name: "{{item}}"
-    state: present
-  loop:
-    - nodejs
-    - gcc-c++
-
-- name: adding application user
-  ansible.builtin.user:
-    name: roboshop
-    comment: roboshop application user
-
-- name: downloading and extracting user
+- name: configuring nodejs component
   ansible.builtin.include_role:
     name: common
-    tasks_from: download
-
-- name: cleanig the old content
-  ansible.builtin.file:
-    path: /home/roboshop/{{COMPONENT}}
-    state: absent
-
-- name: copy file
-  ansible.builtin.copy:
-    src: /tmp/{{COMPONENT}}-main/
-    dest: /home/roboshop/{{COMPONENT}}/  
-    remote_src: yes
-  become_user: roboshop
-
-- name: Installing node.js package.
-  community.general.npm:
-    path: /home/roboshop/{{COMPONENT}}
-
-- name: copying the systemd file
-  ansible.builtin.copy:
-    src: systemd.service
-    dest: /etc/systemd/system/{{COMPONENT}}.service
-
-- name: restarting service
-  ansible.builtin.systemd:
-    state: restarted
-    daemon-reload: yes
-    name: "{{COMPONENT}}"
-
-- name: doing set-hostname
-  ansible.builtin.include_role:
-    name: common
-    tasks_from: set-hostname
-
 
 
 
