--- a/robot/roles/user/files/systemd.service
+++ b/robot/roles/user/files/systemd.service
@@ -1,11 +1,11 @@
 [Unit]
-Description = Catalogue Service
+Description = User Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=MONGO_URL="mongodb://mongodb.sunny.du.devops.us.to:27017/catalogue"
-ExecStart=/bin/node /home/roboshop/catalogue/server.js
-SyslogIdentifier=catalogue
+Environment=MONGO_URL="mongodb://mongodb.sunny.du.devops.us.to:27017/user"
+ExecStart=/bin/node /home/roboshop/user/server.js
+SyslogIdentifier=user
 
 [Install]
 WantedBy=multi-user.target
