--- a/robot/roles/cart/files/systemd.service
+++ b/robot/roles/cart/files/systemd.service
@@ -1,5 +1,5 @@
 [Unit]
-Description = cart Service
+Description = Cart Service
 [Service]
 User=roboshop
 Environment=REDIS_HOST=redis.sunny.du.devops.us.to
