--- a/robot/roles/mysql/tasks/main.yaml
+++ b/robot/roles/mysql/tasks/main.yaml
@@ -31,14 +31,14 @@
       register: DEFAULT_ROOT_PASSWORD
       when: stat.failed
 
-    - name: copy mysql password reset file
+    - name: copy mysql password reset file  #mysql --connect-expired-password -uroot -p"{{ lookup('pipe', 'grep \'temporary password\' /var/log/mysqld.log | awk \'{print $NF}\'') }}"
       ansible.builtin.copy:
         src: root_password.sql
         dest: /tmp/root_password.sql
       when: stat.failed
 
     - name: reset mysql default login_password
-      ansible.builtin.shell: mysql --conect-expired-password -uroot -p"{{DEFAULT_ROOT_PASSWORD}}" < /tmp/root_password.sql
+      ansible.builtin.shell: mysql --connect-expired-password -uroot -p"{{DEFAULT_ROOT_PASSWORD}}" < /tmp/root_password.sql
       register: DEFAULT_ROOT_PASSWORD
       when: stat.failed
 
