--- a/robot/roles/mysql/tasks/main.yaml
+++ b/robot/roles/mysql/tasks/main.yaml
@@ -45,7 +45,7 @@
   ignore_errors: yes
 
 - name: uninstall password validate plugin
-  when: PLUGIN_INFO.rc == 0
+  #when: PLUGIN_INFO.rc == 0
   block:
     - name: copying the password validate command
       ansible.builtin.copy:
