--- a/robot/roles/frontend/files/roboshop.conf
+++ b/robot/roles/frontend/files/roboshop.conf
@@ -18,7 +18,7 @@ location /api/cart/ { proxy_pass http://cart.sunny.du.devops.us.to:8080/; }
 
 location /api/shipping/ { proxy_pass http://shipping.sunny.du.devops.us.to:8080/; }
 
-location /api/payment/ { proxy_pass http://localhost:8080/; }
+location /api/payment/ { proxy_pass http://payment.sunny.du.devops.us.to:8080/; }
 
 location /nginx_status {
         stub_status on;
